--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/print
+    url: jdbc:postgresql://localhost:5432/myprint
     username: postgres
     password: user
     driver-class-name: org.postgresql.Driver
